--- a/src/css/index.css
+++ b/src/css/index.css
@@ -31,7 +31,7 @@ body {
   .container {
     grid-template-rows: auto !important;
     & section {
-      overflow-x: hidden;
+      overflow: hidden;
     }
     & .row {
       grid-template-columns: 1fr !important;
