--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -94,7 +94,11 @@
     opacity: 1;
   }
 }
-
+@media screen and (min-width: 660px) and (max-width: 1024px) {
+  .section4 {
+    background-size: cover !important;
+  }
+}
 @media screen and (max-width: 659px) {
   .section4 {
     background-size: cover !important;
